force-app/main/default/objects/ReportingDetail__c/ReportingDetail__c.object-meta.xml
<CustomObject>
    <description>Used to capture details on Programatic reports, status and accomplishments as related to a Programmatic Activity</description>
    <label>Reporting Detail</label>
    <nameField>
        <displayFormat>RP-{0}</displayFormat>
        <label>Reporting Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>