force-app/main/default/objects/ReportingDetail__c/fields/Choice_this_period__c.field-meta.xml
<CustomField>
    <fullName>Choice_this_period__c</fullName>
    <label>Choice (this period)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>