force-app/main/default/objects/ReportingDetail__c/fields/North_Central_this_period__c.field-meta.xml
<CustomField>
    <fullName>North_Central_this_period__c</fullName>
    <label>North Central (this period)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>