force-app/main/default/objects/ReportingDetail__c/fields/Northwest_this_Period__c.field-meta.xml
<CustomField>
    <fullName>Northwest_this_Period__c</fullName>
    <label>Northwest (this period)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>