force-app/main/default/objects/ReportingDetail__c/fields/ProgramActivity__c.field-meta.xml
<CustomField>
    <fullName>ProgramActivity__c</fullName>
    <label>Program Activity</label>
    <referenceTo>Program_Activities__c</referenceTo>
    <relationshipLabel>Reporting Details</relationshipLabel>
    <relationshipName>Reporting_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>