force-app/main/default/objects/ReportingDetail__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <label>Reporting</label>
    <referenceTo>Reporting__c</referenceTo>
    <relationshipLabel>Reporting Details</relationshipLabel>
    <relationshipName>Reporting_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>