force-app/main/default/objects/ReportingDetail__c/fields/Southeast_Proposed_this_period__c.field-meta.xml
<CustomField>
    <fullName>Southeast_Proposed_this_period__c</fullName>
    <label>Southeast Proposed (this period)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>