force-app/main/default/objects/ReportingDetail__c/fields/This_Period_Total__c.field-meta.xml
<CustomField>
    <fullName>This_Period_Total__c</fullName>
    <label>This Period Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>